<resources>
    <string name="app_name">Успех</string>
    <string name="payments_str">Оплата</string>
    <string name="balance_str">Внесено на баланс</string>
    <string name="period_comment_str">С текущим периодом</string>
    <string name="pay_date_str">Расчетная дата</string>
    <string name="promo_src">Акции</string>
    <string name="news_str">Новости</string>
    <string name="article_str">Статьи</string>
    <string name="lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. Readable content.</string>
    <string name="uid_str">Счет №: %d</string>
    <string name="title_go_light">Перейти на светлую сторону</string>
    <string name="title_go_dark">Перейти на темную сторону</string>
    <string name="pay_el_got">Получен электронный платеж.</string>
    <string name="pay_cash_got">Получен наличный платеж.</string>
    <string name="pay_temp_user_got">Временный платеж.</string>
    <string name="pay_temp_remove">Удален временный платеж.</string>
    <string name="pay_blocked_pay_reason">Блокировка по финансовым причинам.</string>
    <string name="pay_minus_for_services">Списание за услуги.</string>
    <string name="pay_minus">Списание.</string>
    <string name="pay_plus">Зачисление.</string>
    <string name="tempPayTest">Услуга «Обещанный платеж» позволяет пользоваться услугами связи ООО «Успех» в кредит при отсутствии денежных средств на Вашем Лицевом счете. Услуга «Обещанный платеж» предоставляется на срок от одного до трех дней. Во время действия услуги Обещанный платеж услуга Доступа в Интернет не блокируется даже при отрицательном балансе лицевого счета. В случае если в течение трех дней с момента предоставления «Обещанного платежа» оплата задолженности абонентом не произведена, предоставление услуг прекращается до момента поступления оплаты. Услуга «Обещанный платеж» предоставляется существующим клиентам при условии отсутствия просрочек оплаты по ранее предоставленным «Обещанным платежам» в течение 3-х месяцев. Условия использования Услуги: 1. Услуга «Обещанный платеж» предоставляется Абонентам, у которых на начало нового расчетного периода не хватает денежных средств для списания платы за услуги связи. 2. Услуга Обещанный платёж предоставляет временный доступ к услугам на срок до 3 суток. 3. С момента подключения Услуги Обещанный платеж с Лицевого счета Абонента взимается абонентская плата в полном размере, согласно выбранному Абонентом тарифному плану. 4. Если в течение пользования услугой «Обещанный платеж» Абонент не внесет на Лицевой счет денежные средства в размере не менее полной абонентской платы за Услуги за один расчетный период, предоставление Услуг Абоненту будет приостановлено. Для возобновления оказания Услуг Абоненту необходимо будет внести на Лицевой счет денежные средства в размере полной абонентской платы за Услуги за один расчетный период. 5. Абонент не может воспользоваться услугой «Обещанный платеж» дважды в течение одного расчетного периода. 6. Администрация оставляет за собой право отказать Абоненту в предоставлении Услуги «Обещанный платеж».</string>
    <string name="tempPayAgreement">Правила использования услуги\n(пользовательское соглашение):</string>
    <string name="tmpPayLabel">Временный платеж</string>
    <string name="paymentsLabel">Платежи и списания</string>
    <string name="messageLabel">Сообщение</string>
    <string name="HTTP_403">Неверная авторизация.</string>
    <string name="supportAgentLabel">Агент поддержки</string>
    <string name="activateBtnLabel">Активировать</string>
    <string name="issueDiagLabel">Диагностика проблемы</string>
    <string name="letsSolveIssueLabel">Уточнение проблемы.</string>
    <string name="issueQuest_0">В данный момент я испытываю трудности с услугой:</string>
    <string name="issueChose">Выберите подходящий вариант:</string>
    <string name="choseServiceIssue">В данный момент я испытываю трудности с услугой:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toBeginLabel">начало</string>
    <string name="title_activity_issue_result">IssueResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="issueResultLabel">Результат диагностики</string>
    <string name="issueRecommendLabel">Рекомендуем ознакомиться со следующими материалами по теме:</string>
    <string name="notSolvedIssueLabel">Это не решило проблему, пусть мне перезвонят.</string>
    <string name="notSolverIssueSendLabel">Это не решило проблему. Отправить отчет специалисту.</string>
    <string name="problemSolvedLabel">Это помогло решить проблему.</string>
    <string name="callToSolve">\nПрошу перезвонить для решения проблемы.</string>
    <string name="solveAndReply">Прошу связаться со мной через сообщения.</string>
    <string name="sendLabel">отправить</string>
    <string name="solvedLabel">Я смог самостоятельно решить проблему.</string>
    <string name="extraInfoRequireLabel">Если нужно, добавьте дополнительную информацию здесь.</string>
    <string name="nextBtnLabel">далее</string>
    <string name="callMeStr">Прошу перезвонить мне.</string>
    <string name="solutionsForUserStr">Для решения проблемы были предложены следующие материалы:\n</string>
    <string name="payLabel">Оплата (инструкции)</string>
    <string name="accessGranted">Доступ открыт.</string>
    <string name="requiredSummLabel">"Необходимо внести на счет не менее "</string>
    <string name="copyed">Номер счета скопирован.</string>
    <string name="newsLabel">Новости</string>
    <string name="errorLabel">"Ошибка: "</string>
    <string name="readMoreLabel">Читать больше</string>
    <string name="promoLabel">Акции</string>
    <string name="artidleLabel">Статьи</string>
    <string name="remainLoginLabel">Как узнать имя/пароль?</string>
    <string name="loginHelpPageLabel">Вам могут помочь следующие материалы:</string>
    <string name="menuLabelShare">Поделиться</string>
    <string name="menuLabelDarkSide">Перейти на темную сторону</string>
    <string name="menuLabelSite">Наш сайт</string>
    <string name="menuLabelDev">Связь с разработчиком</string>
    <string name="menuLabelPolicy">Политика конфеденциальности</string>
    <string name="menuLabelExit">Выйти</string>
    <string name="secureLabel">Безопасность данных</string>
    <string name="emailFeedbackLabel">О приложении Успех</string>
    <string name="writeToDevLabel">Написать разработчику</string>
    <string name="feedbackLabel">Оставить отзыв</string>
    <string name="feedbackTitle">Оставите отзыв о приложении?</string>
    <string name="leterLabel">Позже</string>
    <string name="noLabel">Нет</string>
    <string name="makeFeedbackLabel">Оставить</string>
    <string name="navMenuMultiAcc">Мультиаккаунт</string>
    <string name="devOptionsLabel">Опция в разработке (появится позже)</string>
</resources>