<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintTempPayRoot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.TempPayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_black"
        android:theme="@style/Theme.AppCompat.DayNight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Widget.AppCompat.Toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:src="@drawable/call_svg" />

        <TextView
            android:id="@+id/textViewToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tmpPayLabel"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:tint="@color/main_light"
            android:layout_marginEnd="20dp"
            android:background="@color/trans"
            android:src="@drawable/back_icon" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempPayAgreement"
                android:fontFamily="@font/montserratbold"
                android:textSize="18sp"
                android:layout_gravity="center|top"
                />

            <TextView
                android:id="@+id/textViewTempPayDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/montserratregular"
                android:textAlignment="viewStart"
                tools:text="@string/tempPayTest" />

            <CheckBox
                android:id="@+id/checkboxAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Условия\nпринимаю"
                android:fontFamily="@font/montserratregular"
                tools:checked="true"
                />

            <Button
                android:id="@+id/buttonTempPayActivate"
                android:layout_width="165dp"
                android:layout_height="55dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/activateBtnLabel"
                android:textColor="@color/main_light"
                android:backgroundTint="@color/main_red"
                android:layout_marginTop="14dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:visibility="invisible"
                />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>