<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.IssueResultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main_black"
        android:theme="@style/Theme.AppCompat.DayNight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Widget.AppCompat.Toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:src="@drawable/call_svg" />

        <TextView
            android:id="@+id/textViewToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:text="@string/issueResultLabel"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@color/trans"
            android:src="@drawable/back_icon"
            app:tint="@color/main_light" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewIssueResume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/montserratbold"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="some" />

            <TextView
                android:id="@+id/textViewIssueResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/issueRecommendLabel"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewIssueResume" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIssueResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewIssueResult" />

            <LinearLayout
                android:id="@+id/layoutButtonsIssueResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="26dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewIssueResult">

                <Button
                    android:id="@+id/buttonNotSolvedCall"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/notSolvedIssueLabel"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/main_light" />

                <Button
                    android:id="@+id/buttonNotSolvedSend"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/notSolverIssueSendLabel"
                    android:textColor="@color/main_light" />

                <Button
                    android:id="@+id/buttonSolved"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/problemSolvedLabel"
                    android:textColor="@color/main_green" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>




















